force-app/main/default/objects/Stock_Level__c/Stock_Level__c.object-meta.xml
<CustomObject>
    <label>Stock Level</label>
    <nameField>
        <displayFormat>SL{0000}</displayFormat>
        <label>Stock Level Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>