force-app/main/default/objects/Stock_Level__c/fields/Available_to_Sell__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Sell__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Available to Sell</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>