force-app/main/default/objects/Stock_Level__c/fields/Change_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Change_Quantity__c</fullName>
    <label>Change Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>