force-app/main/default/objects/Stock_Level__c/fields/Count_on_Hand__c.field-meta.xml
<CustomField>
    <fullName>Count_on_Hand__c</fullName>
    <label>Count on Hand</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>