force-app/main/default/objects/Stock_Level__c/fields/Last_Inventory_Count__c.field-meta.xml
<CustomField>
    <fullName>Last_Inventory_Count__c</fullName>
    <label>Last Inventory Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>