force-app/main/default/objects/Stock_Level__c/fields/Last_Inventory_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inventory_Date__c</fullName>
    <label>Last Inventory Date</label>
    <type>Date</type>
</CustomField>