force-app/main/default/objects/Stock_Level__c/fields/Minimum_Stock_Reorder_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Stock_Reorder_Level__c</fullName>
    <label>Minimum Stock Reorder Level</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>