force-app/main/default/objects/Stock_Level__c/fields/Out_of_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Stock_Level__c</fullName>
    <label>Out of Stock Level</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>