force-app/main/default/objects/Stock_Level__c/fields/Set_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Set_Quantity__c</fullName>
    <label>Set Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>