force-app/main/default/objects/Stock_Level__c/fields/Stock_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Stock_Level_Name__c</fullName>
    <label>Stock Level Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>