force-app/main/default/objects/Stock_Level__c/fields/Stock_Location__c.field-meta.xml
<CustomField>
    <fullName>Stock_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Location</label>
    <referenceTo>Stock_Location__c</referenceTo>
    <relationshipLabel>Stock Levels</relationshipLabel>
    <relationshipName>Stock_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>