force-app/main/default/objects/Stock_Level__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <formula>TEXT(Product__r.Unit_of_Measure__c)</formula>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>