force-app/main/default/objects/Stock_Level__c/validationRules/STCK_LVL_Last_Inventory_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>STCK_LVL_Last_Inventory_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
NOT(ISBLANK(Last_Inventory_Count__c )),
ISBLANK(Last_Inventory_Date__c)
),
AND(
ISBLANK(Last_Inventory_Count__c ),
NOT(ISBLANK(Last_Inventory_Date__c))
)
)</errorConditionFormula>
    <errorMessage>Last Inventory Count or Last Inventory Date is Blank</errorMessage>
</ValidationRule>