force-app/main/default/objects/Stock_Level__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stock_Level_Name__c</columns>
    <columns>Available_to_Sell__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>